JS bug on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -45,14 +45,14 @@
 @media only screen and (max-width: 700px) { 
     #answer-container {
         display: block;
-        height: 200px;
+        height: 250px;
         justify-content: space-around;
     }
 
     #answer-buttons {
         display: flex;
         flex-direction: column;
-        height: 150px;
+        height: 250px;
         justify-content: space-around;
     }
 
